Prevent text overflow in repo info

--- a/src/components/ReposOverview/ReposOverview.css
+++ b/src/components/ReposOverview/ReposOverview.css
@@ -57,6 +57,7 @@
 
   background: #fff;
   border-radius: 6px;
+  word-break: break-word;
 }
 
 .c-repos-entry__name-link {
